--- a/apps/oewbcc/docker-compose.yml
+++ b/apps/oewbcc/docker-compose.yml
@@ -21,8 +21,8 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data:/data
       - ${APP_DATA_DIR}/plugin/data:/var/octoeverywhere/plugin/data
-    # ports:
-    #   - ${APP_PORT}:5001
+    ports:
+      - ${APP_PORT}:8707
     restart: unless-stopped
     networks:
       - tipi_main_network
@@ -32,7 +32,7 @@ services:
       # Main
       traefik.enable: true
       traefik.http.middlewares.oewbcc-web-redirect.redirectscheme.scheme: https
-      # traefik.http.services.oewbcc.loadbalancer.server.port: 5001
+      traefik.http.services.oewbcc.loadbalancer.server.port: 8707
       # Web
       traefik.http.routers.oewbcc-insecure.rule: Host(`${APP_DOMAIN}`)
       traefik.http.routers.oewbcc-insecure.entrypoints: web
